--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,6 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
+  <a href="https://github.com/ovrmrw/angular-rxjs-lifegame">GitHub</a>
 </body>
 </html>
