--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>AngularRxjsLifegame</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
